--- a/app/assets/css/demo.css
+++ b/app/assets/css/demo.css
@@ -106,36 +106,30 @@
   margin-top: 1rem;
 }
 
-
-header{
-  background: #8E2DE2;
-  background: -webkit-linear-gradient(to right, #4A00E0, #8E2DE2);
-  background: linear-gradient(to right, #4A00E0, #8E2DE2);
-}
-
 /*estilos para la tabla*/
 table th {
-  background: -webkit-linear-gradient(to right, #ffffff, #cdc9d4);
-  background: linear-gradient(to right, #ffffff, #cdc9d4);
-  color: white;
+  background: rgb(2, 0, 36);
+  background: radial-gradient(circle, rgba(2, 0, 36, 1) 0%, rgba(2, 0, 36, 1) 99%, rgba(2, 81, 124, 1) 100%);
+  color: #fff !important;
 }
-table>tbody>tr>td {
+table > tbody > tr > td {
   vertical-align: middle !important;
 }
 
 /*para alinear los botones y cuadro de busqueda*/
-.btn-group, .btn-group-vertical {
+.btn-group,
+.btn-group-vertical {
   position: absolute !important;
 }
 
-a:hover{
+a:hover {
   text-decoration: none;
 }
 
-select.custom-select{
+select.custom-select {
   padding: 15px;
 }
 
-.btn-nones{
+.btn-nones {
   display: none;
 }
