--- a/app/assets/css/demo.css
+++ b/app/assets/css/demo.css
@@ -108,8 +108,8 @@
 
 /*estilos para la tabla*/
 table th {
-  background: rgb(2, 0, 36);
-  background: radial-gradient(circle, rgba(2, 0, 36, 1) 0%, rgba(2, 0, 36, 1) 99%, rgba(2, 81, 124, 1) 100%);
+  background: rgb(2, 81, 124);
+  background: radial-gradient(circle, rgba(2, 81, 124, 1) 0%, rgba(3, 21, 42, 1) 100%);
   color: #fff !important;
 }
 table > tbody > tr > td {
